Creacion base de los componentes y el enrutmiento de las paginas y primer modelo del navbar

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,13 @@
   "projects": {
     "pixelArt": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "css",
+          "skipTests": false,
+          "standalone": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
