--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10739518?us
 spring.datasource.username=sql10739518
 spring.datasource.password=eLZwq2Pt2V
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
