--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,6 +19,11 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "paths": {
+      "@primeuix/utils/eventbus": [
+        "node_modules/@primeuix/utils/eventbus/index.d.mts"
+      ]
+    },
     "lib": [
       "ES2022",
       "dom"
