--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -19,6 +19,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "/",
             "outputPath": {
               "base": "dist/pixel-art"
             },
