B feat: Añade funcionalidad de imagen a imagen mediante IA
- Se crean los componentes necesarios para la edición de imágenes.
- Se implementan nuevos métodos en `AIImageService`.
- Se añade un nuevo método en la interfaz de `AIImageService`.
- Se implementa un nuevo método en `AIImageController`.
- Se configuran CORS específicos en los métodos del backend para permitir la comunicación con el frontend.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=pixelart
 
 server.port=4002
 
-spring.datasource.url=url
-spring.datasource.username=USERNAME
-spring.datasource.password=YOUR_PASSWORD_HERE
+spring.datasource.url=jdbc:
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ai.image.api.url=https://api.openai.com/v1/images/generations
 ai.image.api.key=
