Mejoras en la interfaz de los componentes ai image generator edit image Mejoras en el system promp para texto a imagen Mejoras en backend AIService

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,13 +2,19 @@ spring.application.name=pixelart
 
 server.port=4002
 
-spring.datasource.url=jdbc:
-spring.datasource.username=adm
-spring.datasource.password=adm
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ai.image.api.url=https://api.openai.com/v1/images/generations
-ai.image.api.key=adm
-ai.image.system.prompt=Generate pixel art in strict 8-bit/16-bit retro video game style. Use [16x16] or [32x32] resolution (must be divisible by 8). Strict limited color palette: max 16 colors (use dithering if needed, reference NES/Game Boy palettes). Style: low-res, no anti-aliasing, sharp edges, high contrast, indexed colors only. Prioritize clarity and readability for functional sprites/game assets. Avoid gradients, shadows, modern effects, and complex details. If user mentions 'sprite sheet', generate grid layout (e.g., 4x4 tiles) with perfect alignment, transparency (PNG alpha channel), and consistent scaling. For animations, include 4-8 frames with pixel-perfect movement loops. Theme/subject: {user_input}. Examples: [platformer character (idle/jump/run), RPG item icons, top-down terrain tiles, arcade enemy with attack animation].
+ai.image.api.key=
+ai.image.system.prompt=Generate a SINGLE 8-bit/16-bit pixel art. \
+Resolution: 64x64 pixels. \
+Color Palette: Strictly 24 colors max . \
+Style: Clean pixel art, no anti-aliasing, no gradients \
+Focus: One well-defined Theme.Do NOT generate transparent background unless explicitly requested. \
+Do NOT generate multiple poses, sprite sheets, or animations unless explicitly requested. \
+Theme: {user_input} \
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
