--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,13 @@
     "@angular/router": "^19.2.1",
     "@primeng/themes": "^19.0.9",
     "@primeuix/utils": "^0.5.1",
+    "@types/three": "^0.174.0",
+    "p5": "^1.11.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
+    "three": "^0.174.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -32,6 +35,7 @@
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.1",
     "@types/jasmine": "~4.3.0",
+    "@types/p5": "^1.7.6",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
