--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,24 @@ server.port=4002
 spring.mvc.async.request-timeout=300000
 server.tomcat.connection-timeout=300000
 server.tomcat.keep-alive-timeout=300000
+spring.datasource.url=jdbc:mysql:
+spring.datasource.username=avnadmin
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+ai.image.api.url=https://api.openai.com/v1/images/generations
+ai.image.api.key=
+ai.image.system.prompt=Generate a SINGLE 8-bit/16-bit pixel art. \
+Resolution: 64x64 pixels. \
+Color Palette: Strictly 24 colors max . \
+Style: Clean pixel art, no anti-aliasing, no gradients \
+Focus: One well-defined Theme.Do NOT generate transparent background unless explicitly requested. \
+Do NOT generate multiple poses, sprite sheets, or animations unless explicitly requested. \
+Theme: {user_input} \
+
+# PixelLab API Configuration
+pixellab.api.url=https://api.pixellab.ai/v1/generate-image-pixflux
+pixellab.api.key=
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
