--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.async.request-timeout=300000
 server.tomcat.connection-timeout=300000
 server.tomcat.keep-alive-timeout=300000
 spring.datasource.url=jdbc:mysql:
-spring.datasource.username=avnadmin
+spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ai.image.api.url=https://api.openai.com/v1/images/generations
@@ -21,6 +21,7 @@ Theme: {user_input} \
 # PixelLab API Configuration
 pixellab.api.url=https://api.pixellab.ai/v1/generate-image-pixflux
 pixellab.api.key=
+
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
