Mejora en pixelyze

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,9 +20,7 @@ Theme: {user_input} \
 
 # PixelLab API Configuration
 pixellab.api.url=https://api.pixellab.ai/v1/generate-image-pixflux
-pixellab.api.key=
-
-
+pixellab.api.key=e3a60242-f192-4f14-9da4-18d465c12e4c
 
 
 spring.jpa.show-sql=true
