Implementacion de filtros y pantalla de usuario

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=4002
 spring.mvc.async.request-timeout=300000
 server.tomcat.connection-timeout=300000
 server.tomcat.keep-alive-timeout=300000
-spring.datasource.url=jdbc:mysql://localhost:3306/pixelart
+spring.datasource.url=jdbc:mysql://localhost:3306/prueba
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ai.image.api.url=https://api.openai.com/v1/images/generations
 ai.image.api.key=
